# kotor-cpp-tools

./: CMakeLists.txt  README.md
cmake/: applications.cmake  compiler.cmake  dependencies.cmake  modules.cmake  options.cmake  submodules.cmake  version.cmake
cmake/utils/: git-version.cmake
src/Applications/: CMakeLists.txt
src/Applications/src/: kotorGffReader.cxx  kotorLipReader.cxx  kotorMdlReader.cxx
src/FileLoader/: CMakeLists.txt
src/FileLoader/include/: GenericFileFormat.h  KotorBinaryFile.h  LipFile.h  LipSyncFile.h  MdlFile.h
src/FileLoader/src/: GenericFileFormat.cpp  KotorBinaryFile.cpp  LipFile.cpp  LipSyncFile.cpp  MdlFile.cpp
